# LovelyVulkan

./: .ccls  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/shaders/: closesthit.rchit  common.glsl  math.glsl  miss.rmiss  quad.frag  quad.vert  raygen.rgen  sumImage.comp  test.comp
app/shaders_bin/: closesthit.rchit.spv  miss.rmiss.spv  quad.frag.spv  quad.vert.spv  raygen.rgen.spv  sumImage.comp.spv  test.comp.spv
include/: AppContext.h  AppExt.h  BufferTools.h  Camera.h  ComputeShader.h  Device.h  DummyWindow.h  FrameManager.h  ImageStore.h  ImageTools.h  Mesh.h  Overlay.h  Rasterizer.h  RayTracer.h  RenderPass.h  ResourceStore.h  Structs.hpp  Swapchain.h  Utils.h  Window.h  liftedvulkan.h  precomp.h
src/: AppContext.cpp  BufferTools.cpp  Camera.cpp  ComputeShader.cpp  Device.cpp  DummyWindow.cpp  FrameManager.cpp  ImageStore.cpp  ImageTools.cpp  Mesh.cpp  Overlay.cpp  Rasterizer.cpp  RayTracer.cpp  RenderPass.cpp  ResourceStore.cpp  Swapchain.cpp  Window.cpp  precomp.cpp
